@@ -53,7 +53,7 @@ static int mosquitto__connect_init(struct mosquitto *mosq, const char *host, int
 		mosq->id[1] = 'o';
 		mosq->id[2] = 's';
 		mosq->id[3] = 'q';
-		mosq->id[4] = '/';
+		mosq->id[4] = '-';
 
 		rc = util__random_bytes(&mosq->id[5], 18);
 		if(rc) return rc;
