@@ -1,6 +1,11 @@
+Client library:
+- Don't use `/` in autogenerated client ids, to avoid confusing with topics.
+
 Clients:
 - mosquitto_sub: Fix `-E` incorrectly not working unless `-d` was also
   specified. Closes #1418.
+- Updated documentation around automatic client ids.
+
 
 1.6.6 - 20190917
 ================
